--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,38 @@
+@font-face {
+  src: url(/font/FiraCode-Medium.ttf);
+  font-family: Cas;
+}
+
+@font-face {
+  src: url(/font/GreatVibes-Regular.ttf);
+  font-family: Cool;
+}
+
+@font-face {
+  src: url(/font/DancingScript-VariableFont_wght.ttf);
+  font-family: Cool2;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.motto {
+  text-align: center;
+
+  font-weight: 300;
+  font-family: Cool;
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  font-family: Cas;
 }
 
 html {
@@ -13,10 +44,9 @@ html {
   margin-top: 15px;
 }
 
-.CV {
-  position: fixed;
-  top: 25px;
-  padding: 5px;
+.CV-Button {
+  text-align: center;
+  justify-content: center;
 }
 
 .main {
@@ -25,16 +55,24 @@ html {
   font-size: 1rem;
   text-align: center;
   font-style: normal;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.large {
+  max-width: 100%;
+}
+
+.normal {
+  max-width: 75vh;
 }
 
 .container-1 {
-  background-color: #242424;
+  justify-content: center;
+  background-color: #282923;
   color: #ffffff;
   justify-content: center;
   margin: auto;
-  max-width: 75vh;
+  margin-bottom: 25px;
+
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 1px solid black;
 }
@@ -51,26 +89,26 @@ html {
 .about {
   display: flex;
   justify-content: space-around;
-
-  padding: 15px;
+  padding: 0px;
 }
 
 .aboutmetext {
-  padding-top: 1rem;
+  padding-top: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 350;
 }
-.picture {
-  padding: 5px;
-}
+
 .pp {
-  min-width: 250px;
-  width: 15vw;
-  height: auto;
+  border: 15px #282923 solid;
   float: left;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
+  min-width: 250px;
+  min-height: auto;
+  max-height: 300px;
+  max-width: auto;
+
+  height: auto;
+  margin-right: 5px;
 }
 
 .links {
@@ -106,4 +144,20 @@ table {
   width: 100%;
   padding: 0px;
   margin: 0px;
+}
+
+green {
+  color: #82d02b;
+}
+
+red {
+  color: #ed2058;
+}
+
+blue {
+  color: #63dee8;
+}
+
+text {
+  color: #e6dc7c;
 }
