--- a/style/style.css
+++ b/style/style.css
@@ -81,11 +81,6 @@ html {
   padding: 15px;
 }
 
-.container-3 {
-  padding-left: 55px;
-  padding-right: 55px;
-}
-
 .about {
   display: flex;
   justify-content: space-around;
@@ -99,16 +94,14 @@ html {
   font-weight: 350;
 }
 
-.pp {
+.container-1 img {
   border: 15px #282923 solid;
   float: left;
   min-width: 250px;
   min-height: auto;
   max-height: 300px;
   max-width: auto;
-
   height: auto;
-  margin-right: 5px;
 }
 
 .links {
@@ -145,6 +138,9 @@ table {
   padding: 0px;
   margin: 0px;
 }
+.table {
+  margin: 0;
+}
 
 green {
   color: #82d02b;
@@ -163,7 +159,47 @@ text {
 }
 
 @media (max-width: 860px) {
+  .container-1 img {
+    height: 360px;
+    width: 339px;
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
   .normal {
     max-width: 100%;
+    padding: 5px;
+    margin: 0;
+  }
+
+  .main {
+    padding: 0;
+  }
+
+  p {
+    font-size: 1.5rem;
+    padding-right: 0;
+    padding-left: 0rem;
+    padding-top: 0rem;
+    font-family: Cas;
+  }
+
+  .motto {
+    padding: 2rem;
+  }
+  .container-1 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .container-1 img {
+    border: none;
+    margin: 4vw;
+    padding: 0;
+  }
+
+  .table {
+    font-size: 4.23vw !important;
   }
 }
