--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,10 +41,14 @@ body {
   }
   header {
     color: black !important;
+    transition: left 0.5s ease-in-out !important;
+    &.clicked {
+      left: 0 !important;
+    }
     &.scrolled {
       padding-top: 5rem;
       position: fixed;
-      left: 0;
+      left: -160px;
       top: 0;
       background-color: black;
       height: 100%;
@@ -110,12 +114,12 @@ body {
     #welcome {
       width: 100%;
       height: 1000px;
-      transition: 1s;
+      transition: 0.2s;
       &.scrolled {
-        margin-top: 5rem;
+        margin-top: 4rem;
       }
       h1 {
-        transition: 1s;
+        transition: 0.2s;
         padding-top: 5rem;
         padding-bottom: 5rem;
         text-align: center;
@@ -193,7 +197,7 @@ body {
       grid-gap: 2px;
       height: 100%;
       width: 100%;
-      div {
+      & > * {
         height: 100%;
         width: 100%;
         color: white;
