--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
   background-image: url("/assets/img/background.png");
 }
 
+body.stop-scrolling {
+  overflow: hidden;
+}
+
 body .side-nav {
   cursor: pointer;
   height: 53.3333333333px;
@@ -221,92 +225,127 @@ body main #about {
   color: white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2px;
+  grid-gap: 0;
   height: 100%;
   width: 100%;
   transition: 2s;
 }
 
-body main #about > * {
+body main #about #resume, body main #about #info, body main #about #tools, body main #about #portfolio {
+  z-index: 500;
   cursor: pointer;
   height: 100%;
   width: 100%;
   color: white;
   display: flex;
-  text-align: center;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   transition: 2s;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
 }
 
-body main #about > *:hover {
+body main #about #resume.shift-right, body main #about #info.shift-right, body main #about #tools.shift-right, body main #about #portfolio.shift-right {
+  position: relative;
+  left: 100%;
+}
+
+body main #about #resume.shift-left, body main #about #info.shift-left, body main #about #tools.shift-left, body main #about #portfolio.shift-left {
+  position: relative;
+  left: auto;
+  right: 100%;
+}
+
+body main #about:hover {
   cursor: pointer;
 }
 
-body main #about > *:hover:nth-child(1) {
-  padding-top: 3rem;
+body main #about:hover #info:hover {
   background: linear-gradient(to right, rgba(1, 41, 29, 0.808), rgba(3, 25, 44, 0.897)), url(../img/programmer.gif);
   background-repeat: no-repeat;
   background-size: 130%;
 }
 
-body main #about > *:hover:nth-child(2) {
-  padding-top: 3rem;
+body main #about:hover #resume:hover {
   background: linear-gradient(to right, rgba(3, 1, 34, 0.911), rgba(35, 2, 58, 0.87)), url(../img/computer.gif);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 150%;
 }
 
-body main #about > *:hover:nth-child(3) {
+body main #about:hover #portfolio:hover {
   background: linear-gradient(to right, rgba(49, 53, 0, 0.959), rgba(66, 38, 1, 0.87)), url(../img/bench.gif);
   background-repeat: no-repeat;
   background-size: 130%;
 }
 
-body main #about > *:hover:nth-child(4) {
+body main #about:hover #tools:hover {
   background: linear-gradient(to right, rgba(3, 3, 3, 0.75), rgba(0, 0, 0, 0.75)), url(../img/portfolio.gif);
   background-repeat: no-repeat;
   background-size: 120%;
 }
 
-body main #about > * a {
+body main #about a {
   display: none;
 }
 
-body main #about > * h3 {
+body main #about h3 {
   font-size: 75;
   font-weight: 750;
-  padding-bottom: 2rem;
 }
 
-body main #about > * img {
+body main #about img {
   padding-bottom: 2rem;
   padding-top: 2rem;
   height: 75px;
   width: 75px;
 }
 
-body main #about div:nth-child(1) {
+body main #info {
   background: linear-gradient(to right, rgba(0, 255, 179, 0.6), rgba(14, 134, 233, 0.6)), url(../img/programmer.gif);
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: 1000px;
 }
 
-body main #about div:nth-child(2) {
+body main #resume {
   background: linear-gradient(to right, rgba(9, 3, 95, 0.2), rgba(88, 2, 146, 0.6)), url(../img/computer.gif);
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: 1000px;
 }
 
-body main #about div:nth-child(3) {
+body main #portfolio {
   background: linear-gradient(to right, rgba(238, 255, 0, 0.301), rgba(241, 137, 0, 0.6)), url(../img/bench.gif);
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: 1000px;
 }
 
-body main #about div:nth-child(4) {
+body main #tools {
   background: linear-gradient(to right, rgba(3, 3, 3, 0.6), rgba(0, 0, 0, 0.6)), url(../img/portfolio.gif);
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: 1000px;
+}
+
+body #hiddens {
+  position: absolute;
+  left: 160;
+  right: 0;
+  right: 200;
+  top: 1096px;
+  z-index: 55;
+}
+
+body #hiddens .hidden-about {
+  z-index: 55;
+  background-color: #fff;
+  height: 100vh;
+  width: 105%;
+  color: black;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 5vw;
 }
