--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,14 @@
   margin: 0;
   color: white;
   scroll-behavior: smooth;
+
 }
 
 body {
+  &.stop-scrolling
+  {
+    overflow: hidden;
+  }
   background-image: url('/assets/img/background.png');
   .side-nav {
     cursor: pointer;
@@ -191,32 +196,53 @@ body {
       }
     }
     #about {
+      
+      
       color: white;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-gap: 2px;
+      grid-gap: 0;
       height: 100%;
       width: 100%;
       transition: 2s;
-  
       
-
-      & > * {
+        
+        #resume, #info, #tools, #portfolio
+        {
+          
+        z-index: 500;
         cursor: pointer;
         height: 100%;
         width: 100%;
         color: white;
         display: flex;
-        text-align: center;
+ 
         align-items: center;
         justify-content: center;
         flex-direction: column;
         transition: 2s;
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 0;
+          &.shift-right
+        {
+          position: relative;
+          left: 100%;
+        }
+        &.shift-left
+        {
+          position: relative;
+          left: auto;
+          right: 100%;
+        }
+        }
+       
         &:hover {
-          
+       
           cursor: pointer;
-          &:nth-child(1) {           
-            padding-top: 3rem; 
+          #info:hover {           
 
             background: linear-gradient(
               
@@ -228,8 +254,7 @@ body {
             background-repeat: no-repeat;
             background-size: 130%;
           }
-          &:nth-child(2) {
-            padding-top: 3rem; 
+          #resume:hover {
 
             background: linear-gradient(
                 to right,
@@ -238,9 +263,10 @@ body {
               ),
               url(../img/computer.gif);
             background-repeat: no-repeat;
-            background-size: 100%;
+            background-size: 150%;
+
           }
-          &:nth-child(3) {
+          #portfolio:hover {
             background: linear-gradient(
                 to right,
                 rgba(49, 53, 0, 0.959),
@@ -250,7 +276,7 @@ body {
             background-repeat: no-repeat;
             background-size: 130%;
           }
-          &:nth-child(4) {
+          #tools:hover {
             background: linear-gradient(
                 to right,
                 rgba(3, 3, 3, 0.75),
@@ -269,7 +295,6 @@ body {
         h3 {
           font-size: 75;
           font-weight: 750;
-          padding-bottom: 2rem;
          
         }
         img {
@@ -279,7 +304,7 @@ body {
           width: 75px;
         }
       }
-      div:nth-child(1) {
+      #info{
         background: linear-gradient(
             to right,
             rgba(0, 255, 179, 0.6),
@@ -287,9 +312,10 @@ body {
           ),
           url(../img/programmer.gif);
         background-repeat: no-repeat;        
-        background-size: 150%;
+        background-size: 1000px;
+       
       }
-      div:nth-child(2) {
+      #resume {
         background: linear-gradient(
             to right,
             rgba(9, 3, 95, 0.2),
@@ -297,9 +323,9 @@ body {
           ),
           url(../img/computer.gif);
         background-repeat: no-repeat;
-        background-size: 150%;
+        background-size: 1000px;
       }
-      div:nth-child(3) {
+      #portfolio {
         background: linear-gradient(
             to right,
             rgba(238, 255, 0, 0.301),
@@ -307,9 +333,9 @@ body {
           ),
           url(../img/bench.gif);
         background-repeat: no-repeat;
-        background-size: 150%;
+        background-size: 1000px;
       }
-      div:nth-child(4) {
+      #tools {
         background: linear-gradient(
             to right,
             rgba(3, 3, 3, 0.6),
@@ -317,8 +343,33 @@ body {
           ),
           url(../img/portfolio.gif);
         background-repeat: no-repeat;
-        background-size: 150%;
+        background-size: 1000px;
       }
     }
+    #hiddens
+    {
+      position: absolute;
+      left: 160;
+      right: 0;
+      right: 200;
+      top:1096px;
+      z-index: 55;
+      .hidden-about
+      {
+        z-index: 55;
+        background-color: #fff;
+        height: 100vh;
+        width: 105%;
+        color: black;
+        display: flex;
+        text-align:center;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 5vw;
+    }
+   
   }
+  
 }
+  
+
