About me cards ready

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   color: white;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
@@ -43,6 +44,7 @@ body .side-nav .close {
 
 body .side-nav img {
   height: 35px;
+  width: auto;
 }
 
 body header {
@@ -256,8 +258,7 @@ body main #about #resume.shift-right, body main #about #info.shift-right, body m
 
 body main #about #resume.shift-left, body main #about #info.shift-left, body main #about #tools.shift-left, body main #about #portfolio.shift-left {
   position: relative;
-  left: auto;
-  right: 100%;
+  left: -100%;
 }
 
 body main #about:hover {
@@ -300,8 +301,8 @@ body main #about h3 {
 body main #about img {
   padding-bottom: 2rem;
   padding-top: 2rem;
-  height: 75px;
-  width: 75px;
+  height: 150px;
+  width: auto;
 }
 
 body main #info {
@@ -329,8 +330,9 @@ body main #tools {
 }
 
 body #hiddens {
+  transition: 2s;
   position: absolute;
-  left: 160;
+  left: 200;
   right: 0;
   right: 200;
   top: 1096px;
@@ -338,14 +340,77 @@ body #hiddens {
 }
 
 body #hiddens .hidden-about {
-  z-index: 55;
+  z-index: 0;
+  position: absolute;
+  top: 0;
   background-color: #fff;
   height: 100vh;
-  width: 105%;
+  width: 100%;
   color: black;
   display: flex;
   text-align: center;
   justify-content: space-around;
   align-items: center;
   font-size: 5vw;
+}
+
+body #hiddens .hidden-resume {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  background-color: green;
+  height: 100vh;
+  width: 100%;
+  color: black;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 5vw;
+}
+
+body #hiddens .hidden-portfolio {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  background-color: yellow;
+  height: 100vh;
+  width: 100%;
+  color: black;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 5vw;
+}
+
+body #hiddens .hidden-tools {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  background-color: pink;
+  height: 100vh;
+  width: 100%;
+  color: black;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 5vw;
+}
+
+body .close-about {
+  color: #fff;
+  position: absolute;
+  top: 1200;
+  right: 225px;
+  z-index: 2001;
+  cursor: pointer;
+  background-color: black;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 25px;
 }
