--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -206,7 +206,7 @@ body {
       grid-gap: 0;
       height: 100%;
       width: 100%;
-      transition: 2s;
+      transition: 1s;
       
         
         #resume, #info, #tools, #portfolio
@@ -222,7 +222,7 @@ body {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        transition: 2s;
+        transition: 1s;
         position: relative;
         top: 0;
         left: 0;
@@ -353,9 +353,9 @@ body {
 
       transition: 2s;
       position: absolute;
-      left: 200;
+      left: 160;
       right: 0;
-      right: 200;
+      right: 160;
       top:1096px;
       z-index: 55;
 
@@ -369,17 +369,37 @@ body {
         width: 100%;
         color: black;
         display: flex;
-        text-align:center;
-        justify-content: space-around;
-        align-items: center;
-        font-size: 5vw;
+        flex-direction: column;
+        padding: 2rem;
+        text-align: center;
+        h3
+        {
+          padding: 2rem;
+          font-size: 75;
+          text-align: center;
+          color: black;
+        }
+        h4
+        {
+          padding: 2rem;
+          color: black;
+          font-size: 30;
+          text-align: center;
+        }
+        p
+        {
+          padding: 0 5rem 2rem 5rem;
+          font-weight: 200;
+          text-align: start;
+          color: black;
+        }
     }
     .hidden-resume
     {
       z-index: 0;
         position: absolute;
         top:0;
-        background-color: green;
+        background-color: none;
         height: 100vh;
         width: 100%;
         color: black;
@@ -388,6 +408,21 @@ body {
         justify-content: space-around;
         align-items: center;
         font-size: 5vw;
+        .left
+        {
+          color: black;
+          width: 100%;
+          height: 100%;
+          background-color: white;
+        }
+        .right
+        {
+          color: black;
+
+          height: 100%;
+          width: 100%;
+          background-color: white;
+        }
     }
     .hidden-portfolio
     {
@@ -431,6 +466,8 @@ body {
   background-color: black;
   height: 25px;
   display: flex;
+  padding: 0;
+  justify-items: center;
   align-items: center;
   justify-content: center;
   text-align: center;
