--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,16 @@ body .side-nav {
   z-index: 1;
 }
 
+@media only screen and (max-width: 1366px) {
+  body .side-nav {
+    z-index: 99999;
+    display: block !important;
+    position: fixed;
+    left: 53.3333333333px;
+    top: 53.3333333333px;
+  }
+}
+
 body .side-nav .side-nav-img {
   transition: 0.5s;
   -webkit-transform: rotate(180deg);
@@ -52,8 +62,21 @@ body header {
   transition: left 0.5s ease-in-out !important;
 }
 
+@media only screen and (max-width: 1366px) {
+  body header {
+    display: none;
+    text-align: center;
+  }
+}
+
 body header.clicked {
   left: 0 !important;
+  right: 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 body header.scrolled {
@@ -66,6 +89,20 @@ body header.scrolled {
   width: 160px;
   overflow-x: hidden;
   text-align: start;
+}
+
+@media only screen and (max-width: 1366px) {
+  body header.scrolled {
+    z-index: 10000;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    position: fixed;
+    left: -1000px;
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 body header.scrolled nav {
@@ -134,6 +171,12 @@ body main {
   background-color: rgba(0, 0, 0, 0.781);
 }
 
+@media only screen and (max-width: 1366px) {
+  body main {
+    margin: 0;
+  }
+}
+
 body main #welcome {
   width: 100%;
   height: 1000px;
@@ -164,7 +207,14 @@ body main #welcome .text {
 
 body main #welcome .text h2 {
   padding: 0.5vw 0.5vw 0.5vw 0;
-  font-size: 30px;
+  font-size: 2.5vw;
+}
+
+@media only screen and (max-width: 1366px) {
+  body main #welcome .text h2 {
+    font-size: 15px;
+    padding: 0.2vw 0.2vw 0.2vw 0;
+  }
 }
 
 body main #welcome .text h2:nth-child(2) {
@@ -189,8 +239,8 @@ body main #welcome .buttons .social img {
   justify-content: center;
   align-items: center;
   justify-items: center;
-  width: 32px;
-  height: 32px;
+  width: 50px;
+  height: 50px;
 }
 
 body main #welcome .buttons .scroll {
@@ -206,15 +256,15 @@ body main #welcome .buttons .scroll {
 body main #welcome .buttons .scroll .mouse {
   margin: 0;
   padding: 0;
-  width: 45px;
-  height: 45px;
+  width: 65px;
+  height: 65px;
 }
 
 body main #welcome .buttons .scroll .wheel {
   transition: 1s;
   position: relative;
-  top: -10px;
-  left: -27px;
+  top: -20px;
+  left: -37px;
   width: 10px;
   height: 10px;
 }
@@ -224,6 +274,7 @@ body main #welcome .buttons .scroll:hover .wheel {
 }
 
 body main #about {
+  overflow: hidden;
   color: white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -231,6 +282,18 @@ body main #about {
   height: 100%;
   width: 100%;
   transition: 1s;
+}
+
+@media only screen and (max-width: 1366px) {
+  body main #about {
+    grid-template-columns: repeat(1, 1fr);
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 body main #about #resume, body main #about #info, body main #about #tools, body main #about #portfolio {
@@ -249,6 +312,18 @@ body main #about #resume, body main #about #info, body main #about #tools, body 
   left: 0;
   right: 0;
   padding: 0;
+}
+
+@media only screen and (max-width: 1366px) {
+  body main #about #resume, body main #about #info, body main #about #tools, body main #about #portfolio {
+    height: 500px;
+    width: 100%;
+  }
+}
+
+body main #about #resume p, body main #about #info p, body main #about #tools p, body main #about #portfolio p {
+  text-align: center;
+  padding: 2px;
 }
 
 body main #about #resume.shift-right, body main #about #info.shift-right, body main #about #tools.shift-right, body main #about #portfolio.shift-right {
@@ -333,10 +408,19 @@ body #hiddens {
   transition: 2s;
   position: absolute;
   left: 160;
-  right: 0;
   right: 160;
   top: 1096px;
   z-index: 55;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens {
+    height: 150%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
 }
 
 body #hiddens .hidden-about {
@@ -351,6 +435,14 @@ body #hiddens .hidden-about {
   flex-direction: column;
   padding: 2rem;
   text-align: center;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-about {
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+  }
 }
 
 body #hiddens .hidden-about h3 {
@@ -394,6 +486,13 @@ body #hiddens .hidden-resume * {
   color: black;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume {
+    height: 100vh;
+    width: 100%;
+  }
+}
+
 body #hiddens .hidden-resume .left {
   color: black;
   width: 100%;
@@ -403,12 +502,25 @@ body #hiddens .hidden-resume .left {
 
 body #hiddens .hidden-resume .left h5 {
   padding: 2rem;
-  font-size: 50;
+  font-size: 3vw;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .left h5 {
+    font-size: 30px;
+  }
 }
 
 body #hiddens .hidden-resume .left img {
   height: 50px;
   width: 50px;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .left img {
+    height: 35;
+    width: 35;
+  }
 }
 
 body #hiddens .hidden-resume .left .work {
@@ -433,27 +545,71 @@ body #hiddens .hidden-resume .left .work li .date {
   font-weight: 500;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .left .work li .date {
+    font-size: 10;
+    padding: 1vw;
+  }
+}
+
 body #hiddens .hidden-resume .left .work li .title {
-  padding: 2vw 2vw 2vw 0;
-  font-size: 1.5vw;
+  padding: 2rem 2rem 2rem 0;
+  font-size: 25;
   width: 20vw;
   font-weight: 500;
   text-align: start;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .left .work li .title {
+    padding: 2rem 2rem 2rem 0;
+    font-size: 25;
+    width: 20vw;
+    font-weight: 500;
+    text-align: start;
+    font-size: 15;
+    width: 100%;
+    padding: 2rem;
+  }
+}
+
 body #hiddens .hidden-resume .left .work li .company {
-  padding: 2rem 2rem 2rem 0;
+  padding: 2vw 2vw 2vw 0;
   font-size: 1.3vw;
   font-weight: 350;
   text-align: start;
   color: gray;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .left .work li .company {
+    padding: 2rem 2rem 2rem 0;
+    font-size: 25;
+    width: 20vw;
+    font-weight: 500;
+    text-align: start;
+    font-size: 15;
+    width: 100%;
+    padding: 2rem;
+  }
+}
+
 body #hiddens .hidden-resume .right {
   color: black;
-  height: 100%;
   width: 100%;
+  height: 100%;
   background-color: white;
+}
+
+body #hiddens .hidden-resume .right h5 {
+  padding: 1rem;
+  font-size: 3vw;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .right h5 {
+    font-size: 30px;
+  }
 }
 
 body #hiddens .hidden-resume .right img {
@@ -461,9 +617,11 @@ body #hiddens .hidden-resume .right img {
   width: 50px;
 }
 
-body #hiddens .hidden-resume .right h5 {
-  padding: 2rem;
-  font-size: 3vw;
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .right img {
+    height: 35;
+    width: 35;
+  }
 }
 
 body #hiddens .hidden-resume .right .work {
@@ -475,33 +633,66 @@ body #hiddens .hidden-resume .right .work {
 }
 
 body #hiddens .hidden-resume .right .work li {
-  font-size: 5vw;
   color: #4ece99;
 }
 
 body #hiddens .hidden-resume .right .work li .date {
-  padding: 0.7vw;
+  padding: 1vw;
   display: inline-block;
   color: #4ece99;
   width: auto;
-  font-size: 1vw;
+  font-size: 25;
   border: 1px solid #4ece99;
   font-weight: 500;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .right .work li .date {
+    font-size: 10;
+    padding: 1vw;
+  }
+}
+
 body #hiddens .hidden-resume .right .work li .title {
+  padding: 2rem 2rem 2rem 0;
+  font-size: 25;
+  width: 20vw;
+  font-weight: 500;
+  text-align: start;
   padding: 1vw 1vw 1vw 0;
-  font-size: 1.3vw;
+  font-size: 25;
+  width: 20vw;
   font-weight: 500;
   text-align: start;
 }
 
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .right .work li .title {
+    font-size: 15;
+    width: 100%;
+    padding: 2rem;
+  }
+}
+
 body #hiddens .hidden-resume .right .work li .company {
-  padding: 1vw 1vw 1vw 0;
-  font-size: 1vw;
+  padding: 2rem 2rem 2rem 0;
+  font-size: 1.3vw;
   font-weight: 350;
   text-align: start;
   color: gray;
+}
+
+@media only screen and (max-width: 1366px) {
+  body #hiddens .hidden-resume .right .work li .company {
+    padding: 2rem 2rem 2rem 0;
+    font-size: 25;
+    width: 20vw;
+    font-weight: 500;
+    text-align: start;
+    font-size: 15;
+    width: 100%;
+    padding: 1rem;
+  }
 }
 
 body #hiddens .hidden-portfolio {
@@ -550,4 +741,12 @@ body .close-about {
   justify-content: center;
   text-align: center;
   width: 25px;
+}
+
+@media only screen and (max-width: 1366px) {
+  body .close-about {
+    position: absolute;
+    top: 1200;
+    right: 30;
+  }
 }
