--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,14 @@ body header {
   transition: left 0.5s ease-in-out !important;
 }
 
+body header .left {
+  padding-right: 2rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 1366px) {
   body header {
     display: none;
@@ -88,7 +96,7 @@ body header.scrolled {
   height: 100%;
   width: 160px;
   overflow-x: hidden;
-  text-align: start;
+  text-align: center;
 }
 
 @media only screen and (max-width: 1366px) {
@@ -586,7 +594,7 @@ body #hiddens .hidden-resume .left .work li .company {
     width: 20vw;
     font-weight: 500;
     text-align: start;
-    font-size: 15;
+    font-size: 13;
     width: 100%;
     padding: 2rem;
   }
@@ -635,11 +643,11 @@ body #hiddens .hidden-resume .right .work li {
 }
 
 body #hiddens .hidden-resume .right .work li .date {
-  padding: 1vw;
+  padding: 10 5 10 5;
   display: inline-block;
   color: #4ece99;
   width: auto;
-  font-size: 25;
+  font-size: 20;
   border: 1px solid #4ece99;
   font-weight: 500;
 }
@@ -652,7 +660,7 @@ body #hiddens .hidden-resume .right .work li .date {
 }
 
 body #hiddens .hidden-resume .right .work li .title {
-  padding: 2rem 2rem 2rem 0;
+  padding: 2rem 2rem 0rem 0;
   font-size: 25;
   width: 20vw;
   font-weight: 500;
@@ -673,8 +681,8 @@ body #hiddens .hidden-resume .right .work li .title {
 }
 
 body #hiddens .hidden-resume .right .work li .company {
-  padding: 2rem 2rem 2rem 0;
-  font-size: 1.3vw;
+  padding: 2rem 2rem 0rem 0;
+  font-size: 1vw;
   font-weight: 350;
   text-align: start;
   color: gray;
@@ -687,7 +695,7 @@ body #hiddens .hidden-resume .right .work li .company {
     width: 20vw;
     font-weight: 500;
     text-align: start;
-    font-size: 15;
+    font-size: 12;
     width: 100%;
     padding: 1rem;
   }
